<resources>
    <string name="app_name">LifeFlow</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="app">LifeFlow</string>
    <string name="firstname">Firstname</string>
    <string name="lastname">Lastname</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="register_text">Have An Account ? Login</string>
    <string name="login_text">Sign in, to access your account</string>
    <string name="login_conf_text">Don\'t Have An Account ? Register</string>
    <string name="login_prompt">Login</string>
    <string name="register_txt">Create an account, and get started</string>
    <string name="home">Home</string>
    <string name="requests">Requests</string>
    <string name="notifications">Notifications</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_patrick">Welcome, Patrick</string>
    <string name="copyright">Copyright\t|\tLifeFlow</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="issues">Issues</string>
    <string name="log_out">Log Out</string>
    <string name="delete_account">Delete Account</string>
    <string name="go_back">Go Back</string>
    <string name="setting">Setting</string>
    <string name="title_activity_setting_screen">SettingScreen</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="update">Update</string>
    <string name="you_could_help_someone_out_today">You could help someone out today</string>
    <string name="show_more">SHOW MORE</string>

<!--  Custom  -->
    <string-array name="groups">
    <item>A+</item>
    <item>A-</item>
    <item>B+</item>
    <item>B-</item>
    <item>AB+</item>
    <item>AB-</item>
    <item>O+</item>
    <item>O-</item>
    </string-array>
</resources>