<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light"
    android:paddingHorizontal="24dp"
    android:paddingVertical="32dp"
    tools:context=".views.RegisterScreen">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/app_name"
            android:textColor="@color/accent"
            android:textSize="24sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/rubik"
            android:text="@string/register_txt"
            android:textColor="@color/overlay"
            android:textSize="16sp" />


        <EditText
            android:id="@+id/edtFirstname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="24dp"
            android:autofillHints=""
            android:background="@drawable/field_overlay"
            android:fontFamily="@font/rubik"
            android:hint="@string/firstname"
            android:inputType="text"
            android:padding="16dp"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/edtLastname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:autofillHints="name"
            android:background="@drawable/field_overlay"
            android:fontFamily="@font/rubik"
            android:hint="@string/lastname"
            android:inputType="text"
            android:padding="16dp"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/edtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:autofillHints="emailAddress"
            android:background="@drawable/field_overlay"
            android:fontFamily="@font/rubik"
            android:hint="@string/email_address"
            android:inputType="textEmailAddress"
            android:padding="16dp"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/spBloodGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/groups"
            android:background="@drawable/field_overlay"
            android:padding="16dp"
            android:layout_marginBottom="24dp"
            />

        <EditText
            android:id="@+id/edtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:autofillHints="password"
            android:background="@drawable/field_overlay"
            android:fontFamily="@font/rubik"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="16dp"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/edtConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:autofillHints="password"
            android:background="@drawable/field_overlay"
            android:fontFamily="@font/rubik"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:padding="16dp"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:fontFamily="@font/rubik"
            android:paddingHorizontal="16dp"
            android:text="@string/login_conf_text"
            android:textColor="@color/accent"
            android:textSize="12sp"
            android:textStyle="italic"
            android:visibility="gone" />

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:background="@drawable/button_background"
            style="@style/Widget.App.ButtonStyle"
            android:fontFamily="@font/poppins"
            android:text="@string/register"
            android:textColor="@color/white"
            android:textAllCaps="false" />

        <TextView
            android:id="@+id/tvLink"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/rubik"
            android:text="@string/register_text"
            android:textAlignment="center"
            android:textColor="@color/overlay_secondary"
            android:textSize="12sp" />

    </LinearLayout>


</ScrollView>